--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -28,3 +28,13 @@ h1{
     margin: 0;
     letter-spacing: 10px;
 }
+
+.cursor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 12rem;
+    height: 12rem;
+    pointer-events: none;
+    background-color: red;
+  }
